# nlpcli-pakage-library

./: README.md
nlpcli/: pyproject.toml
nlpcli/src/nlpcli/: cli.py  config.ini  sample.txt  services.py  testapp.py
nlpcli/tests/: test_cli.py
nlpfileio/: README.md
nlpfileio/src/nlpfileio/sample_data/: sample.csv  sample.txt
nlpfileio/tests/: test_cli.py
