[project]
name = "nlpcli"
version = "0.1.0"
description ="An open-source Python library for CLI and NLP tasks"
authors = [
    {name = "Fatemeh Ahmadzadeh",email = "ahmadzade920@gmail.com"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ahmadzadeh920/nlpcli-pakage-library"
repository = "https://github.com/Ahmadzadeh920/nlpcli-pakage-library"
keywords = ["cli", "nlp", "text", "utilities"]
packages = [{include = "nlpcli", from = "src"}]



[tool.poetry.dependencies]
python = ">=3.10"
click = "*"
colorama = "*"
textblob = "*"
pyfiglet = "*"
spacy = "*"
setuptools = "*"
click-config-file = "*"
click-params = "*"
pandas = "*"
click-help-colors = "*"
rich = "*"
commonmark = "*"


[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nlpcli-download = "nlpcli.setup:download_resources"
nlpcli = "nlpcli.cli:main"
